# Text-Analytics-in-IT-Job-Demands

./: .replit  DEPLOYMENT.md  README.md  app.py  generate_dataset.py  init_app.py  main.py  nlp_processor.py  pdf_report.py  pyproject.toml  replit.md  requirements.txt  run.sh  sedcd6KFi
.streamlit/: config.toml  secrets.toml.example
attached_assets/: Pasted--MASTER-PROJECT-PROMPT-Create-a-complete-end-to-end-pro_1770962977770.txt  Pasted-LookupError-Resource-93mst-1770965266750_1770965266753.txt
data/: it_job_postings.csv
